@@ -59,8 +59,10 @@ interface JobSubmissionProtocol extends VersionedProtocol {
    * Version 20: Modified ClusterStatus to have the tasktracker expiry
    *             interval for HADOOP-4939
    * Version 21: Modified TaskID to be aware of the new TaskTypes                                 
+   * Version 22: Added method getQueueAclsForCurrentUser to get queue acls info
+   *             for a user
    */
-  public static final long versionID = 21L;
+  public static final long versionID = 22L;
 
   /**
    * Allocate a name for the job.
@@ -213,4 +215,11 @@ interface JobSubmissionProtocol extends VersionedProtocol {
    * @throws IOException
    */
   public JobStatus[] getJobsFromQueue(String queue) throws IOException;
+  
+  /**
+   * Gets the Queue ACLs for current user
+   * @return array of QueueAclsInfo object for current user.
+   * @throws IOException
+   */
+  public QueueAclsInfo[] getQueueAclsForCurrentUser() throws IOException;
 }
